...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/right"
                        app:layout_constraintStart_toStartOf="@+id/left"
                        app:layout_constraintTop_toBottomOf="@+id/panel_title">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/namePurchaseEditText"
                            style="@style/EditTextPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(s) -> listener.onNamePurchaseTextChanged(s.toString())}"
                            android:hint="@string/hint_purchase"
                            android:inputType="text" />
...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/right"
                        app:layout_constraintStart_toStartOf="@+id/left"
                        app:layout_constraintTop_toBottomOf="@+id/tl_input">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/countPurchaseEditText"
                            style="@style/EditTextPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(s) -> listener.onCountPurchaseTextChanged(s.toString())}"
                            android:hint="@string/hint_count_purchase"
                            android:inputType="numberDecimal" />
...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/right"
                        app:layout_constraintStart_toStartOf="@+id/left"
                        app:layout_constraintTop_toBottomOf="@+id/tl__count_input">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/costPurchaseEditText"
                            style="@style/EditTextPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(s) -> listener.onCostPurchaseTextChanged(s.toString())}"
                            android:hint="@string/hint_cost_purchase"
                            android:inputType="numberDecimal" />
...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/right"
                        app:layout_constraintStart_toStartOf="@+id/left"
                        app:layout_constraintTop_toBottomOf="@+id/tl__cost_input">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/brandPurchaseEditText"
                            style="@style/EditTextPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(s) -> listener.onBrandPurchaseTextChanged(s.toString())}"
                            android:hint="@string/hint_brand_purchase"
                            android:inputType="text" />
...
                        app:layout_constraintEnd_toEndOf="@+id/right"
                        app:layout_constraintStart_toEndOf="@+id/tv_start_timer"
                        app:layout_constraintTop_toBottomOf="@+id/tv_process"
                        tools:text="Stop time" />

                <Button
                        android:id="@+id/btn_add_purchase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_10dp"
                        android:enabled="true"
                        android:onClick="@{v->listener.encryptDb()}"
                        android:text="@string/encrypt_bd"
...
