<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.fb.roottest.MainActivityViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_bg_main"
                android:theme="@style/ToolbarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@{viewModel.toolbarTitle}"
                tools:title="Title"/>

        <!-- We need this frame layout for toolbar visibility change animation-->
        <FrameLayout
                android:id="@+id/fragmentContainerFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

            <fragment
                    android:id="@+id/nav_host_fragment"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/nav_graph"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>